--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>belajar reactjs</title>
+  <style>
+    body {
+      text-align: center;
+    }
+
+    #root {
+      margin-top: 50vmin;
+    }
+  </style>
 </head>
 
 <body>
