--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>belajar reactjs</title>
   <style>
-    body {
-      text-align: center;
-    }
-
-    #root {
-      margin-top: 50vmin;
+    .toolbar {
+      background-color: #aaa;
+      height: 4rem;
+      line-height: 2rem;
+      width: 12rem;
     }
   </style>
 </head>
