--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>belajar reactjs</title>
   <style>
+    body {
+      background-color: #aaa;
+    }
+
     .toolbar {
       background-color: #aaa;
       height: 4rem;
