membuat papan permainan

--- a/index.html
+++ b/index.html
@@ -5,23 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>belajar reactjs</title>
-  <style>
-    body {
-      background-color: #aaa;
-    }
-
-    .toolbar {
-      background-color: #aaa;
-      height: 4rem;
-      line-height: 2rem;
-      width: 12rem;
-    }
-  </style>
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/app.jsx"></script>
+  <main id="root"></main>
+  <script type="module" src="/src/index.jsx"></script>
 </body>
 
 </html>
