--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>belajar reactjs</title>
+  <title>fanialfi</title>
 </head>
 
 <body>
   <main id="root"></main>
-  <script type="module" src="/src/index.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
